FIX: Main OverflowX Fix

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 .footer {
   @include flex(center, center);
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   padding-top: 5rem;
 
   .menuContainer {
