--- a/src/components/Nav/NavBottomContainer/NavBottomContainer.scss
+++ b/src/components/Nav/NavBottomContainer/NavBottomContainer.scss
@@ -5,10 +5,9 @@
   background-color: #ffc3d4;
 
   .navbar {
-    @include flex(space-between, center);
+    @include flex(center, center);
     padding: 1px 50px;
     height: 65px;
-    width: 100vw;
     box-shadow: 0 8px 15px rgb(0 0 0 / 10%);
     color: white;
     font-size: 35px;
